--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node_modules/gulp/bin/gulp.js"  
+    "build": "node node_modules/gulp/bin/gulp.js"  
   },
   "repository": {
     "type": "git",
